<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstClass_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.FragmentSecond">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="start">
            <TextView
                android:id="@+id/class_text1_id"
                android:layout_width="86dp"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/class_text"
                android:textAlignment="textStart"
                android:textColor="@color/main_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="end">
            <TextView
                android:id="@+id/class_count"
                android:layout_width="19dp"
                android:layout_height="22dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="670dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="4"
                android:textAlignment="center"
                android:textColor="@color/main_dark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tab2_class1_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/main_light_color"
        android:textColor="@color/main_dark"
        app:chipIcon="@drawable/tab2_class1_corner"
        app:closeIconTint="@color/main_dark"
        app:chipIconSize="67dp"
        app:chipIconVisible="true"
        app:chipStrokeColor="#00FFFFFF"
        app:chipSurfaceColor="#00FFFFFF"
        app:closeIcon="@drawable/back_icon"
        app:closeIconVisible="true" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tab2_class2_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/main_light_color"
        android:textColor="@color/main_dark"
        app:chipIcon="@drawable/tab2_class2_corner"
        app:closeIconTint="@color/main_dark"
        app:chipIconSize="67dp"
        app:chipIconVisible="true"
        app:chipStrokeColor="#00FFFFFF"
        app:chipSurfaceColor="#00FFFFFF"
        app:closeIcon="@drawable/back_icon"
        app:closeIconVisible="true" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tab2_class3_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/main_light_color"
        android:textColor="@color/main_dark"
        app:chipIcon="@drawable/tab2_class3_corner"
        app:closeIconTint="@color/main_dark"
        app:chipIconSize="67dp"
        app:chipIconVisible="true"
        app:chipStrokeColor="#00FFFFFF"
        app:chipSurfaceColor="#00FFFFFF"
        app:closeIcon="@drawable/back_icon"
        app:closeIconVisible="true" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip3"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tab2_class4_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/main_light_color"
        android:textColor="@color/main_dark"
        app:chipIcon="@drawable/tab2_class4_corner"
        app:closeIconTint="@color/main_dark"
        app:chipIconSize="67dp"
        app:chipIconVisible="true"
        app:chipStrokeColor="#00FFFFFF"
        app:chipSurfaceColor="#00FFFFFF"
        app:closeIcon="@drawable/back_icon"
        app:closeIconVisible="true" />

</LinearLayout>