<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/main_light_color">


        <TextView
            android:id="@+id/classname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/tab3_class4_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/main_dark"/>

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/second_back_icon" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/class_icon"
            android:layout_marginTop="55dp"
            android:layout_marginStart="265dp"/>
        <TextView
            android:id="@+id/tabname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/tab_text_3"
            android:textSize="16sp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="52dp"
            android:textColor="@color/main_dark"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tab3_class4"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="145dp"
        android:background="@drawable/border_radius_tabs"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/cake_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="11 ингр."
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/timer_icon"
            android:layout_marginStart="175dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="~4 часа"
            android:textSize="18sp"
            android:layout_marginStart="205dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/openRecipe"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/main_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/recipe_text"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:cornerRadius="6dp"/>
    </FrameLayout>
</LinearLayout>