<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab3Class1Recipe"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/main_light_color"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="35dp"
                app:srcCompat="@drawable/second_back_icon" />

            <TextView
                android:id="@+id/classname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="75dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/roboto"
                android:text="@string/tab3_class1_name"
                android:textColor="@color/main_dark"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="end">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/tab3_class1_corner" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/border_radius">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/ingredients"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/main_dark"
                android:textSize="16sp"
                android:text="1. Сахар - 60 г. \n
2. Какао - 1 ст. ложка \n
3. Шоколад - 100 г. \n
4. Молоко - 50 мл. \n
5. Пшеничная мука - 120 г. \n
6. Разрыхлитель - 1 ч.ложка \n
7. Куриное яйцо - 1 шт. \n
8. Сливочное масло - 70 г."
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/recipe"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/main_dark"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:text="1. Духовку разогреть до 180 градусов. \n
2. В кастрюлю положить масло, сахар, шоколад (30 грамм), какао и молоко. Довести смесь до кипения и снять с огня. \n
3. Когда смесь остынет, добавить яйцо и немного взбить. \n
4. Добавить муку и разрыхлитель, перемешать. \n
5. Оставшийся шоколад порубить. \n
6. Форму заполнить тестом на 2/3, затем утопить в нем кусочки шоколада. \n
7. Выпекать 25 минут. \n"
                android:textAlignment="viewStart" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>